Fixed floating nav z-index.

--- a/src/sections/floating-nav/floating-nav.css
+++ b/src/sections/floating-nav/floating-nav.css
@@ -11,6 +11,7 @@
   left: 0;
   text-align: center;
   backdrop-filter: blur(10px);
+  z-index: 9999;
   transition: var(--transition);
 }
 
